day6/app1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: pe-weekend-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
