day6/app2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: pe-weekend-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
