day6/svc1.yml
apiVersion: v1
kind: Service
metadata:
  name: app1-svc
  namespace: pe-weekend-ingress
spec:
  type: ClusterIP
  selector:
    app: app1
  ports:
    - port: 80
      targetPort: 80
