day6/svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: app2-svc
  namespace: pe-weekend-ingress
spec:
  type: ClusterIP
  selector:
    app: app2
  ports:
    - port: 80
      targetPort: 80
